# expandiffusion

./: .env.example  .gitignore  README.md  limpiar-gpu.ps1  package.json
apps/api/: .env.example  pyproject.toml
apps/api/expandiffusion/: __init__.py  constants.py  errors.py  generation_artifacts.py  image_utils.py  jobs.py  main.py  model_storage.py  persistence.py  plugin_actions.py  plugins.py  postprocessors.py  runtime.py  schemas.py  services.py
apps/api/expandiffusion/adapters/: base.py  diffusers_inpaint.py  registry.py
apps/api/expandiffusion/adapters/hf_space_outpaint/: pipeline_fill_sd_xl.py
apps/api/plugins/: README.md
apps/api/plugins/art-face-repair/: plugin.json  plugin.py
apps/api/plugins/auto-detailer/: plugin.json  plugin.py
apps/api/plugins/correction-border-blend/: plugin.json  plugin.py
apps/api/plugins/correction-color-match/: plugin.json  plugin.py
apps/api/plugins/correction-histogram-match/: plugin.json  plugin.py
apps/api/plugins/correction-mask-feather/: plugin.json  plugin.py
apps/api/plugins/correction-multiband-blend/: plugin.json  plugin.py
apps/api/plugins/gfpgan-face-restore/: plugin.json  plugin.py
apps/api/plugins/image-adjustments/: plugin.json  plugin.py
apps/api/plugins/image-to-text/: plugin.json  plugin.py
apps/api/plugins/object-selector/: plugin.json  plugin.py
apps/api/plugins/sdxl-ip-visual-refine/: plugin.json  plugin.py
apps/api/plugins/sdxl-seam-refine/: plugin.json  plugin.py
apps/api/tests/: test_api.py
docs/: architecture.md
notebooks/: expandiffusion_colab.ipynb
scripts/: dev.mjs
(+87 files in other folders)
