[project]
name = "expandiffusion"
version = "0.1.0"
description = "Local extensible outpainting studio with Diffusers adapters."
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "numpy>=1.26.0",
    "opencv-python>=4.10.0",
    "pillow>=10.4.0",
    "pydantic>=2.8.0",
    "python-multipart>=0.0.9",
    "scikit-image>=0.25.0",
    "scipy>=1.14.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
]
diffusers = [
    "accelerate>=0.33.0",
    "clip-interrogator==0.6.0",
    "diffusers>=0.38.0",
    "safetensors>=0.4.4",
    "sentencepiece>=0.2.0",
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "transformers>=4.44.0,<5",
]
face-restoration = [
    "gfpgan>=1.3.8",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: exercises API flows across FastAPI services",
    "real_sd: loads a real Diffusers model and runs generation",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
